<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activity.CadastroUsuarioActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cadastro"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/edtCadNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/nome"
                android:inputType="textCapWords"
                app:bootstrapBrand="info"
                app:bootstrapSize="xl"
                app:roundedCorners="true" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/edtCadCPF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/cpf"
                android:inputType="textCapWords"
                app:bootstrapBrand="info"
                app:bootstrapSize="xl"
                app:roundedCorners="true" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/edtCadRua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/rua"
                android:inputType="textCapWords"
                app:bootstrapBrand="info"
                app:bootstrapSize="xl"
                app:roundedCorners="true" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/edtCadNumero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/num"
                android:inputType="textCapWords"
                app:bootstrapBrand="info"
                app:bootstrapSize="xl"
                app:roundedCorners="true" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/edtCadEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                app:bootstrapBrand="info"
                app:bootstrapSize="xl"
                app:roundedCorners="true" />


            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/edtCadSenha1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/senha"
                android:inputType="textPassword"
                app:bootstrapBrand="info"
                app:bootstrapSize="xl"
                app:roundedCorners="true" />


            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/edtCadSenha2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/repSenha"
                android:inputType="textPassword"
                app:bootstrapBrand="info"
                app:bootstrapSize="xl"
                app:roundedCorners="true" />


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/rbFeminino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/fem"
                    android:textColor="@color/colorWhite" />

                <RadioButton
                    android:id="@+id/rbMasculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/masc"
                    android:textColor="@color/colorWhite" />
            </RadioGroup>


            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btnCadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txtcadastrar"
                app:bootstrapBrand="secondary"
                app:bootstrapSize="xl"
                app:buttonMode="regular"
                app:roundedCorners="true"
                app:showOutline="false" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btnCancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/cancel"
                app:bootstrapBrand="danger"
                app:bootstrapSize="xl"
                app:buttonMode="regular"
                app:roundedCorners="true"
                app:showOutline="false" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>