<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    tools:context=".Activity.CadastroAdminActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cadastrar"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />


            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/edtCadEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                app:bootstrapBrand="info"
                app:bootstrapSize="xl"
                app:roundedCorners="true" />


            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/edtCadSenha1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/senha"
                android:inputType="textPassword"
                app:bootstrapBrand="info"
                app:bootstrapSize="xl"
                app:roundedCorners="true" />


            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/edtCadSenha2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/repSenha"
                android:inputType="textPassword"
                app:bootstrapBrand="info"
                app:bootstrapSize="xl"
                app:roundedCorners="true" />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/edtCadNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/nome"
                android:inputType="textCapWords"
                app:bootstrapBrand="info"
                app:bootstrapSize="xl"
                app:roundedCorners="true" />


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/rbAdmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/tipoAdmin"
                    android:textColor="@color/colorWhite" />

                <RadioButton
                    android:id="@+id/rbAtend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tipoAtendente"
                    android:textColor="@color/colorWhite" />
            </RadioGroup>


            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btnCadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btncadastrar"
                app:bootstrapBrand="secondary"
                app:bootstrapSize="xl"
                app:buttonMode="regular"
                app:roundedCorners="true"
                app:showOutline="false" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btnCancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/cancel"
                app:bootstrapBrand="danger"
                app:bootstrapSize="xl"
                app:buttonMode="regular"
                app:roundedCorners="true"
                app:showOutline="false" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>

