<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AgendamentoActivity">

    <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
        android:id="@+id/ImageProfissional"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/teste"
        app:bootstrapBrand="danger"
        app:hasBorder="true" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:layout_toEndOf="@+id/ImageProfissional"
        android:text="@string/profissional"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/escolhahorario"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#A52A2A"
        android:layout_below="@+id/ImageProfissional"
        android:text="@string/selecioneHora"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:id="@+id/linha"
        android:layout_below="@+id/escolhahorario"
        android:background="@color/colorPrimary"/>


    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linha"
        android:layout_marginTop="5dp">


        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn1"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/time1"
            app:bootstrapBrand="danger"
            app:bootstrapSize="sm"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn2"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/time2"
            app:bootstrapBrand="danger"
            app:bootstrapSize="sm"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn3"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/time3"
            app:bootstrapBrand="danger"
            app:bootstrapSize="sm"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn4"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/time4"
            app:bootstrapBrand="danger"
            app:bootstrapSize="sm"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout1"
        android:layout_marginTop="5dp">


        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn5"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/time5"
            app:bootstrapBrand="danger"
            app:bootstrapSize="sm"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn6"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/time6"
            app:bootstrapBrand="danger"
            app:bootstrapSize="sm"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn7"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/time7"
            app:bootstrapBrand="danger"
            app:bootstrapSize="sm"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn8"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/time8"
            app:bootstrapBrand="danger"
            app:bootstrapSize="sm"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvagendamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout2"
        android:text=""
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btn9"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="186dp"
        android:text="@string/agendarhorario"
        app:bootstrapBrand="danger"
        app:bootstrapSize="sm"
        app:buttonMode="regular"
        app:roundedCorners="true"
        app:showOutline="false" />

</RelativeLayout>