<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ComumActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:id="@+id/linha"
                android:background="#CCC"/>



            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btnAgendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/linha"
                android:text="@string/btnagendamento"
                app:bootstrapBrand="danger"
                app:bootstrapSize="xl"

                app:buttonMode="regular"
                app:roundedCorners="true"
                app:showOutline="false" />

            <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
                android:id="@+id/Imageshiatsu"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_below="@+id/btnAgendar"
                android:src="@drawable/shiatsu"
                app:bootstrapBrand="danger"
                app:hasBorder="true" />

            <TextView
                android:id="@+id/txtshiatsu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:layout_below="@+id/btnAgendar"
                android:layout_toEndOf="@+id/Imageshiatsu"
                android:text="@string/shiatsu"
                android:textAlignment="center"
                android:layout_marginTop="30dp"
                />

            <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
                android:id="@+id/ImageAyurvedica"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_below="@+id/Imageshiatsu"
                android:src="@drawable/ayurvedica"
                app:bootstrapBrand="danger"
                app:hasBorder="true" />

            <TextView
                android:id="@+id/txtAyurvedica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:layout_below="@+id/txtshiatsu"
                android:layout_toEndOf="@+id/ImageAyurvedica"
                android:text="@string/Ayurvédica"
                android:textAlignment="center"
                android:layout_marginTop="30dp"
                />

            <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
                android:id="@+id/ImageDestoxi"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_below="@+id/ImageAyurvedica"
                android:src="@drawable/detox"
                app:bootstrapBrand="danger"
                app:hasBorder="true" />

            <TextView
                android:id="@+id/txtDestoxi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:layout_below="@+id/txtAyurvedica"
                android:layout_toEndOf="@+id/ImageDestoxi"
                android:text="@string/Destoxi"
                android:textAlignment="center"
                android:layout_marginTop="30dp"
                />



        </RelativeLayout>


    </ScrollView>

</RelativeLayout>